<resources>
    <string name="app_name">Ark4.0</string>
    <string name="action_settings">Settings</string>
    <string name="carnivores">Carnivores</string>
    <string name="title_activity_carnivores">Carnivores</string>
    <string name="all">All</string>
    <string name="title_activity_herbivores">Herbivores</string>
    <string name="herbivores">Herbivores</string>
    <string name="title_activity_add_dino">AddDino</string>
    <string name="addDino">Add Dino</string>
    <string name="title_activity_view_dino">ViewDino</string>
    <string name="viewDino">Your Dinos</string>
    <string name="add_dino">Add the dino you have tamed</string>
    <string name="dino_name">Dino Name:</string>
    <string name="dino_type">Dino Type:</string>
    <string name="dino_lvl">Dino Level:</string>
    <string name="add">Add</string>
    <string name="yourDinos">Your Dinos</string>
    <string name="defaultDinoType">Unknown</string>
    <string name="defaultdinoName">Unknown</string>
    <string name="defaultAmount">1</string>
</resources>
