<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/row_dinoType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/defaultDinoType"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/row_dinoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_dinoType"
        android:layout_alignBottom="@+id/row_dinoType"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="60dp"
        android:layout_toEndOf="@+id/row_dinoType"
        android:text="@string/defaultdinoName"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/row_dinoLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/row_dinoName"
        android:layout_alignBottom="@+id/row_dinoName"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="300dp"
        android:layout_marginStart="70dp"
        android:layout_toEndOf="@+id/row_dinoName"
        android:text="@string/defaultAmount"
        android:textAlignment="center" />

</RelativeLayout>
